@@ -48,19 +48,16 @@ import org.slf4j.LoggerFactory;
 
 import java.net.InetAddress;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.atomic.AtomicLong;
 
-import static java.util.Arrays.asList;
-import static java.util.Collections.singletonList;
 import static org.apache.kafka.common.acl.AclOperation.ALL;
 import static org.apache.kafka.common.acl.AclOperation.ALTER;
 import static org.apache.kafka.common.acl.AclOperation.ALTER_CONFIGS;
@@ -147,25 +144,25 @@ public class StandardAuthorizerTest {
 
     @Test
     public void testGetConfiguredSuperUsers() {
-        assertEquals(Collections.emptySet(),
-            getConfiguredSuperUsers(Collections.emptyMap()));
-        assertEquals(Collections.emptySet(),
-            getConfiguredSuperUsers(Collections.singletonMap(SUPER_USERS_CONFIG, " ")));
-        assertEquals(new HashSet<>(asList("User:bob", "User:alice")),
-            getConfiguredSuperUsers(Collections.singletonMap(SUPER_USERS_CONFIG, "User:bob;User:alice ")));
-        assertEquals(new HashSet<>(asList("User:bob", "User:alice")),
-            getConfiguredSuperUsers(Collections.singletonMap(SUPER_USERS_CONFIG, ";  User:bob  ;  User:alice ")));
+        assertEquals(Set.of(),
+            getConfiguredSuperUsers(Map.of()));
+        assertEquals(Set.of(),
+            getConfiguredSuperUsers(Map.of(SUPER_USERS_CONFIG, " ")));
+        assertEquals(new HashSet<>(List.of("User:bob", "User:alice")),
+            getConfiguredSuperUsers(Map.of(SUPER_USERS_CONFIG, "User:bob;User:alice ")));
+        assertEquals(new HashSet<>(List.of("User:bob", "User:alice")),
+            getConfiguredSuperUsers(Map.of(SUPER_USERS_CONFIG, ";  User:bob  ;  User:alice ")));
         assertEquals("expected a string in format principalType:principalName but got bob",
             assertThrows(IllegalArgumentException.class, () -> getConfiguredSuperUsers(
-                Collections.singletonMap(SUPER_USERS_CONFIG, "bob;:alice"))).getMessage());
+                Map.of(SUPER_USERS_CONFIG, "bob;:alice"))).getMessage());
     }
 
     @Test
     public void testGetDefaultResult() {
-        assertEquals(DENIED, getDefaultResult(Collections.emptyMap()));
-        assertEquals(ALLOWED, getDefaultResult(Collections.singletonMap(
+        assertEquals(DENIED, getDefaultResult(Map.of()));
+        assertEquals(ALLOWED, getDefaultResult(Map.of(
             ALLOW_EVERYONE_IF_NO_ACL_IS_FOUND_CONFIG, "true")));
-        assertEquals(DENIED, getDefaultResult(Collections.singletonMap(
+        assertEquals(DENIED, getDefaultResult(Map.of(
             ALLOW_EVERYONE_IF_NO_ACL_IS_FOUND_CONFIG, "false")));
     }
 
@@ -176,26 +173,26 @@ public class StandardAuthorizerTest {
         configs.put(SUPER_USERS_CONFIG, "User:alice;User:chris");
         configs.put(ALLOW_EVERYONE_IF_NO_ACL_IS_FOUND_CONFIG, "true");
         authorizer.configure(configs);
-        authorizer.start(new AuthorizerTestServerInfo(Collections.singletonList(PLAINTEXT)));
+        authorizer.start(new AuthorizerTestServerInfo(List.of(PLAINTEXT)));
         authorizer.completeInitialLoad();
 
-        List<StandardAclWithId> acls = singletonList(
+        List<StandardAclWithId> acls = List.of(
                 withId(new StandardAcl(TOPIC, "topic1", LITERAL, "User:Alice", WILDCARD, READ, ALLOW))
         );
         acls.forEach(acl -> authorizer.addAcl(acl.id(), acl.acl()));
-        assertEquals(singletonList(DENIED),
+        assertEquals(List.of(DENIED),
                 authorizer.authorize(
                         new MockAuthorizableRequestContext.Builder()
                                 .setPrincipal(new KafkaPrincipal(USER_TYPE, "Bob"))
                                 .build(),
-                        singletonList(newAction(READ, TOPIC, "topic1"))
+                        List.of(newAction(READ, TOPIC, "topic1"))
                 ));
-        assertEquals(singletonList(ALLOWED),
+        assertEquals(List.of(ALLOWED),
                 authorizer.authorize(
                         new MockAuthorizableRequestContext.Builder()
                                 .setPrincipal(new KafkaPrincipal(USER_TYPE, "Bob"))
                                 .build(),
-                        singletonList(newAction(READ, TOPIC, "topic2"))
+                        List.of(newAction(READ, TOPIC, "topic2"))
                 ));
     }
 
@@ -206,26 +203,26 @@ public class StandardAuthorizerTest {
         configs.put(SUPER_USERS_CONFIG, "User:alice;User:chris");
         configs.put(ALLOW_EVERYONE_IF_NO_ACL_IS_FOUND_CONFIG, "false");
         authorizer.configure(configs);
-        authorizer.start(new AuthorizerTestServerInfo(Collections.singletonList(PLAINTEXT)));
+        authorizer.start(new AuthorizerTestServerInfo(List.of(PLAINTEXT)));
         authorizer.completeInitialLoad();
 
-        List<StandardAclWithId> acls = singletonList(
+        List<StandardAclWithId> acls = List.of(
                 withId(new StandardAcl(TOPIC, "topic1", LITERAL, "User:Alice", WILDCARD, READ, ALLOW))
         );
         acls.forEach(acl -> authorizer.addAcl(acl.id(), acl.acl()));
-        assertEquals(singletonList(DENIED),
+        assertEquals(List.of(DENIED),
                 authorizer.authorize(
                         new MockAuthorizableRequestContext.Builder()
                                 .setPrincipal(new KafkaPrincipal(USER_TYPE, "Bob"))
                                 .build(),
-                        singletonList(newAction(READ, TOPIC, "topic1"))
+                        List.of(newAction(READ, TOPIC, "topic1"))
                 ));
-        assertEquals(singletonList(DENIED),
+        assertEquals(List.of(DENIED),
                 authorizer.authorize(
                         new MockAuthorizableRequestContext.Builder()
                                 .setPrincipal(new KafkaPrincipal(USER_TYPE, "Bob"))
                                 .build(),
-                        singletonList(newAction(READ, TOPIC, "topic2"))
+                        List.of(newAction(READ, TOPIC, "topic2"))
                 ));
     }
 
@@ -236,7 +233,7 @@ public class StandardAuthorizerTest {
         configs.put(SUPER_USERS_CONFIG, "User:alice;User:chris");
         configs.put(ALLOW_EVERYONE_IF_NO_ACL_IS_FOUND_CONFIG, "true");
         authorizer.configure(configs);
-        assertEquals(new HashSet<>(asList("User:alice", "User:chris")), authorizer.superUsers());
+        assertEquals(new HashSet<>(List.of("User:alice", "User:chris")), authorizer.superUsers());
         assertEquals(ALLOWED, authorizer.defaultResult());
     }
 
@@ -249,8 +246,8 @@ public class StandardAuthorizerTest {
 
     static StandardAuthorizer createAndInitializeStandardAuthorizer() {
         StandardAuthorizer authorizer = new StandardAuthorizer();
-        authorizer.configure(Collections.singletonMap(SUPER_USERS_CONFIG, "User:superman"));
-        authorizer.start(new AuthorizerTestServerInfo(Collections.singletonList(PLAINTEXT)));
+        authorizer.configure(Map.of(SUPER_USERS_CONFIG, "User:superman"));
+        authorizer.start(new AuthorizerTestServerInfo(List.of(PLAINTEXT)));
         authorizer.completeInitialLoad();
         return authorizer;
     }
@@ -275,7 +272,7 @@ public class StandardAuthorizerTest {
     @Test
     public void testFindResultImplication() throws Exception {
         // These permissions all imply DESCRIBE.
-        for (AclOperation op : asList(DESCRIBE, READ, WRITE, DELETE, ALTER)) {
+        for (AclOperation op : List.of(DESCRIBE, READ, WRITE, DELETE, ALTER)) {
             assertEquals(ALLOWED, findResult(newAction(DESCRIBE, TOPIC, "foo_bar"),
                 new MockAuthorizableRequestContext.Builder().
                     setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
@@ -287,7 +284,7 @@ public class StandardAuthorizerTest {
                         setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
                 newFooAcl(CREATE, ALLOW)));
         // Deny ACLs don't do "implication".
-        for (AclOperation op : asList(READ, WRITE, DELETE, ALTER)) {
+        for (AclOperation op : List.of(READ, WRITE, DELETE, ALTER)) {
             assertNull(findResult(newAction(DESCRIBE, TOPIC, "foo_bar"),
                     new MockAuthorizableRequestContext.Builder().
                             setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
@@ -299,7 +296,7 @@ public class StandardAuthorizerTest {
                 setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
             newFooAcl(DESCRIBE, DENY)));
         // These permissions all imply DESCRIBE_CONFIGS.
-        for (AclOperation op : asList(DESCRIBE_CONFIGS, ALTER_CONFIGS)) {
+        for (AclOperation op : List.of(DESCRIBE_CONFIGS, ALTER_CONFIGS)) {
             assertEquals(ALLOWED, findResult(newAction(DESCRIBE_CONFIGS, TOPIC, "foo_bar"),
                 new MockAuthorizableRequestContext.Builder().
                     setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
@@ -359,10 +356,10 @@ public class StandardAuthorizerTest {
     @Test
     public void testListAcls() {
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
-        List<StandardAclWithId> fooAcls = asList(
+        List<StandardAclWithId> fooAcls = List.of(
             withId(newFooAcl(READ, ALLOW)),
             withId(newFooAcl(WRITE, ALLOW)));
-        List<StandardAclWithId> barAcls = asList(
+        List<StandardAclWithId> barAcls = List.of(
             withId(newBarAcl(DESCRIBE_CONFIGS, DENY)),
             withId(newBarAcl(ALTER_CONFIGS, DENY)));
         fooAcls.forEach(a -> authorizer.addAcl(a.id(), a.acl()));
@@ -380,28 +377,28 @@ public class StandardAuthorizerTest {
     @Test
     public void testSimpleAuthorizations() throws Exception {
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
-        List<StandardAclWithId> fooAcls = asList(
+        List<StandardAclWithId> fooAcls = List.of(
             withId(newFooAcl(READ, ALLOW)),
             withId(newFooAcl(WRITE, ALLOW)));
-        List<StandardAclWithId> barAcls = asList(
+        List<StandardAclWithId> barAcls = List.of(
             withId(newBarAcl(DESCRIBE_CONFIGS, ALLOW)),
             withId(newBarAcl(ALTER_CONFIGS, ALLOW)));
         fooAcls.forEach(a -> authorizer.addAcl(a.id(), a.acl()));
         barAcls.forEach(a -> authorizer.addAcl(a.id(), a.acl()));
-        assertEquals(singletonList(ALLOWED),
+        assertEquals(List.of(ALLOWED),
             authorizer.authorize(new MockAuthorizableRequestContext.Builder().
                 setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
-                    singletonList(newAction(READ, TOPIC, "foo_"))));
-        assertEquals(singletonList(ALLOWED),
+                    List.of(newAction(READ, TOPIC, "foo_"))));
+        assertEquals(List.of(ALLOWED),
             authorizer.authorize(new MockAuthorizableRequestContext.Builder().
                     setPrincipal(new KafkaPrincipal(USER_TYPE, "fred")).build(),
-                singletonList(newAction(ALTER_CONFIGS, GROUP, "bar"))));
+                List.of(newAction(ALTER_CONFIGS, GROUP, "bar"))));
     }
 
     @Test
     public void testDenyPrecedenceWithOperationAll() throws Exception {
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
-        List<StandardAcl> acls = Arrays.asList(
+        List<StandardAcl> acls = List.of(
             new StandardAcl(TOPIC, "foo", LITERAL, "User:alice", "*", ALL, DENY),
             new StandardAcl(TOPIC, "foo", PREFIXED, "User:alice", "*", READ, ALLOW),
             new StandardAcl(TOPIC, "foo", LITERAL, "User:*", "*", ALL, DENY),
@@ -411,16 +408,16 @@ public class StandardAuthorizerTest {
             StandardAclWithId aclWithId = withId(acl);
             authorizer.addAcl(aclWithId.id(), aclWithId.acl());
         });
-        assertEquals(Arrays.asList(DENIED, DENIED, DENIED, ALLOWED), authorizer.authorize(
+        assertEquals(List.of(DENIED, DENIED, DENIED, ALLOWED), authorizer.authorize(
             newRequestContext("alice"),
-            Arrays.asList(
+            List.of(
                 newAction(WRITE, TOPIC, "foo"),
                 newAction(READ, TOPIC, "foo"),
                 newAction(DESCRIBE, TOPIC, "foo"),
                 newAction(READ, TOPIC, "foobar"))));
-        assertEquals(Arrays.asList(DENIED, DENIED, DENIED, ALLOWED, DENIED), authorizer.authorize(
+        assertEquals(List.of(DENIED, DENIED, DENIED, ALLOWED, DENIED), authorizer.authorize(
             newRequestContext("bob"),
-            Arrays.asList(
+            List.of(
                 newAction(DESCRIBE, TOPIC, "foo"),
                 newAction(READ, TOPIC, "foo"),
                 newAction(WRITE, TOPIC, "foo"),
@@ -431,7 +428,7 @@ public class StandardAuthorizerTest {
     @Test
     public void testTopicAclWithOperationAll() throws Exception {
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
-        List<StandardAcl> acls = Arrays.asList(
+        List<StandardAcl> acls = List.of(
             new StandardAcl(TOPIC, "foo", LITERAL, "User:*", "*", ALL, ALLOW),
             new StandardAcl(TOPIC, "bar", PREFIXED, "User:alice", "*", ALL, ALLOW),
             new StandardAcl(TOPIC, "baz", LITERAL, "User:bob", "*", ALL, ALLOW)
@@ -440,23 +437,23 @@ public class StandardAuthorizerTest {
             StandardAclWithId aclWithId = withId(acl);
             authorizer.addAcl(aclWithId.id(), aclWithId.acl());
         });
-        assertEquals(Arrays.asList(ALLOWED, ALLOWED, DENIED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, ALLOWED, DENIED), authorizer.authorize(
             newRequestContext("alice"),
-            Arrays.asList(
+            List.of(
                 newAction(WRITE, TOPIC, "foo"),
                 newAction(DESCRIBE_CONFIGS, TOPIC, "bar"),
                 newAction(DESCRIBE, TOPIC, "baz"))));
 
-        assertEquals(Arrays.asList(ALLOWED, DENIED, ALLOWED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, DENIED, ALLOWED), authorizer.authorize(
             newRequestContext("bob"),
-            Arrays.asList(
+            List.of(
                 newAction(WRITE, TOPIC, "foo"),
                 newAction(READ, TOPIC, "bar"),
                 newAction(DESCRIBE, TOPIC, "baz"))));
 
-        assertEquals(Arrays.asList(ALLOWED, DENIED, DENIED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, DENIED, DENIED), authorizer.authorize(
             newRequestContext("malory"),
-            Arrays.asList(
+            List.of(
                 newAction(DESCRIBE, TOPIC, "foo"),
                 newAction(WRITE, TOPIC, "bar"),
                 newAction(READ, TOPIC, "baz"))));
@@ -474,7 +471,7 @@ public class StandardAuthorizerTest {
         InetAddress host2 = InetAddress.getByName("192.168.1.2");
 
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
-        List<StandardAcl> acls = Arrays.asList(
+        List<StandardAcl> acls = List.of(
             new StandardAcl(TOPIC, "foo", LITERAL, "User:alice", host1.getHostAddress(), READ, DENY),
             new StandardAcl(TOPIC, "foo", LITERAL, "User:alice", "*", READ, ALLOW),
             new StandardAcl(TOPIC, "bar", LITERAL, "User:bob", host2.getHostAddress(), READ, ALLOW),
@@ -486,28 +483,28 @@ public class StandardAuthorizerTest {
             authorizer.addAcl(aclWithId.id(), aclWithId.acl());
         });
 
-        List<Action> actions = Arrays.asList(
+        List<Action> actions = List.of(
             newAction(READ, TOPIC, "foo"),
             newAction(READ, TOPIC, "bar"),
             newAction(DESCRIBE, TOPIC, "bar")
         );
 
-        assertEquals(Arrays.asList(ALLOWED, DENIED, ALLOWED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, DENIED, ALLOWED), authorizer.authorize(
             newRequestContext("alice", InetAddress.getLocalHost()), actions));
 
-        assertEquals(Arrays.asList(DENIED, DENIED, DENIED), authorizer.authorize(
+        assertEquals(List.of(DENIED, DENIED, DENIED), authorizer.authorize(
             newRequestContext("alice", host1), actions));
 
-        assertEquals(Arrays.asList(ALLOWED, DENIED, DENIED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, DENIED, DENIED), authorizer.authorize(
             newRequestContext("alice", host2), actions));
 
-        assertEquals(Arrays.asList(DENIED, DENIED, ALLOWED), authorizer.authorize(
+        assertEquals(List.of(DENIED, DENIED, ALLOWED), authorizer.authorize(
             newRequestContext("bob", InetAddress.getLocalHost()), actions));
 
-        assertEquals(Arrays.asList(DENIED, DENIED, DENIED), authorizer.authorize(
+        assertEquals(List.of(DENIED, DENIED, DENIED), authorizer.authorize(
             newRequestContext("bob", host1), actions));
 
-        assertEquals(Arrays.asList(DENIED, ALLOWED, ALLOWED), authorizer.authorize(
+        assertEquals(List.of(DENIED, ALLOWED, ALLOWED), authorizer.authorize(
             newRequestContext("bob", host2), actions));
     }
 
@@ -519,7 +516,7 @@ public class StandardAuthorizerTest {
     }
 
     private static void addManyAcls(StandardAuthorizer authorizer) {
-        List<StandardAcl> acls = Arrays.asList(
+        List<StandardAcl> acls = List.of(
             new StandardAcl(TOPIC, "green2", LITERAL, "User:*", "*", READ, ALLOW),
             new StandardAcl(TOPIC, "green", PREFIXED, "User:bob", "*", READ, ALLOW),
             new StandardAcl(TOPIC, "betamax4", LITERAL, "User:bob", "*", READ, ALLOW),
@@ -540,15 +537,15 @@ public class StandardAuthorizerTest {
     public void testAuthorizationWithManyAcls() throws Exception {
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
         addManyAcls(authorizer);
-        assertEquals(Arrays.asList(ALLOWED, DENIED),
+        assertEquals(List.of(ALLOWED, DENIED),
             authorizer.authorize(new MockAuthorizableRequestContext.Builder().
                     setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
-                Arrays.asList(newAction(READ, TOPIC, "green1"),
+                List.of(newAction(READ, TOPIC, "green1"),
                     newAction(WRITE, GROUP, "wheel"))));
-        assertEquals(Arrays.asList(DENIED, ALLOWED, DENIED),
+        assertEquals(List.of(DENIED, ALLOWED, DENIED),
             authorizer.authorize(new MockAuthorizableRequestContext.Builder().
                     setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
-                Arrays.asList(newAction(READ, TOPIC, "alpha"),
+                List.of(newAction(READ, TOPIC, "alpha"),
                     newAction(WRITE, GROUP, "arbitrary"),
                     newAction(READ, TOPIC, "ala"))));
     }
@@ -579,7 +576,7 @@ public class StandardAuthorizerTest {
                 .setClientAddress(InetAddress.getByName("127.0.0.1"))
                 .build();
 
-            assertEquals(singletonList(DENIED), authorizer.authorize(requestContext, singletonList(action)));
+            assertEquals(List.of(DENIED), authorizer.authorize(requestContext, List.of(action)));
 
             String expectedAuditLog = "Principal = User:bob is Denied operation = READ " +
                 "from host = 127.0.0.1 on resource = Topic:LITERAL:alpha for request = Fetch " +
@@ -621,7 +618,7 @@ public class StandardAuthorizerTest {
                 .setClientAddress(InetAddress.getByName("127.0.0.1"))
                 .build();
 
-            assertEquals(singletonList(ALLOWED), authorizer.authorize(requestContext, singletonList(action)));
+            assertEquals(List.of(ALLOWED), authorizer.authorize(requestContext, List.of(action)));
 
             String expectedAuditLog = "Principal = User:bob is Allowed operation = READ " +
                 "from host = 127.0.0.1 on resource = Topic:LITERAL:green1 for request = Fetch " +
@@ -644,10 +641,10 @@ public class StandardAuthorizerTest {
     @Test
     public void testStartWithEarlyStartListeners() {
         StandardAuthorizer authorizer = new StandardAuthorizer();
-        authorizer.configure(Collections.singletonMap(SUPER_USERS_CONFIG, "User:superman"));
+        authorizer.configure(Map.of(SUPER_USERS_CONFIG, "User:superman"));
         Map<Endpoint, ? extends CompletionStage<Void>> futures2 = authorizer.
-            start(new AuthorizerTestServerInfo(Arrays.asList(PLAINTEXT, CONTROLLER)));
-        assertEquals(new HashSet<>(Arrays.asList(PLAINTEXT, CONTROLLER)), futures2.keySet());
+            start(new AuthorizerTestServerInfo(List.of(PLAINTEXT, CONTROLLER)));
+        assertEquals(new HashSet<>(List.of(PLAINTEXT, CONTROLLER)), futures2.keySet());
         assertFalse(futures2.get(PLAINTEXT).toCompletableFuture().isDone());
         assertTrue(futures2.get(CONTROLLER).toCompletableFuture().isDone());
     }
@@ -661,26 +658,26 @@ public class StandardAuthorizerTest {
     @Test
     public void testAuthorizationPriorToCompleteInitialLoad() throws Exception {
         StandardAuthorizer authorizer = new StandardAuthorizer();
-        authorizer.configure(Collections.singletonMap(SUPER_USERS_CONFIG, "User:superman"));
+        authorizer.configure(Map.of(SUPER_USERS_CONFIG, "User:superman"));
         assertThrows(AuthorizerNotReadyException.class, () ->
             authorizer.authorize(new MockAuthorizableRequestContext.Builder().
                     setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
-                Arrays.asList(newAction(READ, TOPIC, "green1"),
+                List.of(newAction(READ, TOPIC, "green1"),
                     newAction(READ, TOPIC, "green2"))));
-        assertEquals(Arrays.asList(ALLOWED, ALLOWED),
+        assertEquals(List.of(ALLOWED, ALLOWED),
             authorizer.authorize(new MockAuthorizableRequestContext.Builder().
                     setPrincipal(new KafkaPrincipal(USER_TYPE, "superman")).build(),
-                Arrays.asList(newAction(READ, TOPIC, "green1"),
+                List.of(newAction(READ, TOPIC, "green1"),
                     newAction(WRITE, GROUP, "wheel"))));
     }
 
     @Test
     public void testCompleteInitialLoad() {
         StandardAuthorizer authorizer = new StandardAuthorizer();
-        authorizer.configure(Collections.singletonMap(SUPER_USERS_CONFIG, "User:superman"));
+        authorizer.configure(Map.of(SUPER_USERS_CONFIG, "User:superman"));
         Map<Endpoint, ? extends CompletionStage<Void>> futures = authorizer.
-            start(new AuthorizerTestServerInfo(Collections.singleton(PLAINTEXT)));
-        assertEquals(Collections.singleton(PLAINTEXT), futures.keySet());
+            start(new AuthorizerTestServerInfo(Set.of(PLAINTEXT)));
+        assertEquals(Set.of(PLAINTEXT), futures.keySet());
         assertFalse(futures.get(PLAINTEXT).toCompletableFuture().isDone());
         authorizer.completeInitialLoad();
         assertTrue(futures.get(PLAINTEXT).toCompletableFuture().isDone());
@@ -690,10 +687,10 @@ public class StandardAuthorizerTest {
     @Test
     public void testCompleteInitialLoadWithException() {
         StandardAuthorizer authorizer = new StandardAuthorizer();
-        authorizer.configure(Collections.singletonMap(SUPER_USERS_CONFIG, "User:superman"));
+        authorizer.configure(Map.of(SUPER_USERS_CONFIG, "User:superman"));
         Map<Endpoint, ? extends CompletionStage<Void>> futures = authorizer.
-            start(new AuthorizerTestServerInfo(Arrays.asList(PLAINTEXT, CONTROLLER)));
-        assertEquals(new HashSet<>(Arrays.asList(PLAINTEXT, CONTROLLER)), futures.keySet());
+            start(new AuthorizerTestServerInfo(List.of(PLAINTEXT, CONTROLLER)));
+        assertEquals(new HashSet<>(List.of(PLAINTEXT, CONTROLLER)), futures.keySet());
         assertFalse(futures.get(PLAINTEXT).toCompletableFuture().isDone());
         assertTrue(futures.get(CONTROLLER).toCompletableFuture().isDone());
         authorizer.completeInitialLoad(new TimeoutException("timed out"));
@@ -706,7 +703,7 @@ public class StandardAuthorizerTest {
     @Test
     public void testPrefixAcls() throws Exception {
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
-        List<StandardAcl> acls = Arrays.asList(
+        List<StandardAcl> acls = List.of(
                 new StandardAcl(TOPIC, "fooa", PREFIXED, "User:alice", "*", ALL, ALLOW),
                 new StandardAcl(TOPIC, "foobar", LITERAL, "User:bob", "*", ALL, ALLOW),
                 new StandardAcl(TOPIC, "f", PREFIXED, "User:bob", "*", ALL, ALLOW)
@@ -715,16 +712,16 @@ public class StandardAuthorizerTest {
             StandardAclWithId aclWithId = withId(acl);
             authorizer.addAcl(aclWithId.id(), aclWithId.acl());
         });
-        assertEquals(Arrays.asList(ALLOWED, DENIED, ALLOWED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, DENIED, ALLOWED), authorizer.authorize(
                 newRequestContext("bob"),
-                Arrays.asList(
+                List.of(
                         newAction(WRITE, TOPIC, "foobarr"),
                         newAction(READ, TOPIC, "goobar"),
                         newAction(READ, TOPIC, "fooa"))));
 
-        assertEquals(Arrays.asList(ALLOWED, DENIED, DENIED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, DENIED, DENIED), authorizer.authorize(
                 newRequestContext("alice"),
-                Arrays.asList(
+                List.of(
                         newAction(DESCRIBE, TOPIC, "fooa"),
                         newAction(WRITE, TOPIC, "bar"),
                         newAction(READ, TOPIC, "baz"))));
